--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1291,6 +1291,7 @@ body{
           flex: 0 0 auto;
           font-size: 20px;
           line-height: 68px;
+          padding-top: 17px;
           margin-left: 24px;
           width: 68px;
           height: 68px;
