--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -253,7 +253,7 @@ body{
 /*--------------------------------- Web design sec -------------------------------------*/
 .web_design_sec{
   position: relative;
-  padding: 100px 0;
+  padding: 10px 0;
   margin-bottom: 40px;
   &::before{
     position: absolute;
@@ -262,7 +262,7 @@ body{
     transform: translateY( -50% );
     display: block;
     content: '';
-    height: 80%;
+    height: 100%;
     width: 40%;
     border-radius: 0 140px 140px 0;
     background-color: #f9f9f9;
@@ -361,51 +361,58 @@ body{
       }
     }
   }
-  &__go_bottom{
-    &::before{
-      content: '';
-      display: block;
-      position: absolute;
-      border: 1px solid white;
-      border-radius: 50%;
-      top: 0;
-      right: 0;
-      opacity: 0.35;
-      width: 100%;
-      height: 100%;
-      animation: wave 2s linear 0.5s infinite;
+  .go_bottom_wrapper{
+    text-align: center;
+    margin-top: 30px;
+    .go_bottom{
+      &::before{
+        content: '';
+        display: block;
+        position: absolute;
+        border: 1px solid white;
+        border-radius: 50%;
+        top: 0;
+        right: 0;
+        opacity: 0.35;
+        width: 100%;
+        height: 100%;
+        animation: wave 2s linear 0.5s infinite;
 
-    }
-    &::after{
-      content: '';
-      display: block;
-      position: absolute;
-      border: 1px solid white;
-      border-radius: 50%;
-      opacity: 0.15;
-      top: 0;
-      right: 0;
-      width: 100%;
-      height: 100%;
-      animation: wave 2s linear 1.5s infinite;
+      }
+      &::after{
+        content: '';
+        display: block;
+        position: absolute;
+        border: 1px solid white;
+        border-radius: 50%;
+        opacity: 0.15;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        animation: wave 2s linear 1.5s infinite;
 
+      }
+      //position: absolute;
+      position: relative;
+      display: inline-block;
+      //bottom: -100px;
+      //right: 50%;
+      //transform: translateX(50%);
+      padding: 45px;
+      border-radius: 50%;
+      box-shadow: 0 15px 30px rgba(56, 66, 77, 0.08);
+      background-color: #ffffff;
+      background-image: linear-gradient(to top, #ffffff 0%, #f9f9f9 100%);
+      span{
+        position: absolute;
+        top: 50%;
+        right: 50%;
+        transform: translate(50%, -50%);
+        color: $text_color;
+      }
     }
-    position: absolute;
-    bottom: -15px;
-    right: 50%;
-    transform: translateX(50%);
-    padding: 45px;
-    border-radius: 50%;
-    box-shadow: 0 15px 30px rgba(56, 66, 77, 0.08);
-    background-color: #ffffff;
-    background-image: linear-gradient(to top, #ffffff 0%, #f9f9f9 100%);
-    span{
-      position: absolute;
-      top: 50%;
-      right: 50%;
-      transform: translate(50%, -50%);
-      color: $text_color;
-    }
+
   }
 }
 
