--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -710,17 +710,20 @@ body{
       margin-bottom: 50px;
       .item_title_wrapper{
         display: flex;
-        padding-bottom: 17px;
+        //padding-bottom: 17px;
+        padding-bottom: 4px;
         .services_icon{
           margin-top: -6px;
           img{
-            width: 60px;
+            //width: 60px;
+            width: 55px;
           }
         }
         .title{
           font-size: 18px;
           line-height: 18px;
-          padding-right: 20px;
+          //padding-right: 20px;
+          padding-right: 15px;
           a{
             color: $text_color;
           }
@@ -729,7 +732,8 @@ body{
               font-weight: 700;
               color: #333333;
             }
-            padding-bottom: 13px;
+            //padding-bottom: 13px;
+            padding-bottom: 10px;
           }
           p:last-child{
             a{
@@ -741,8 +745,9 @@ body{
       }
       .item_content{
         position: relative;
+        padding-bottom: 23px;
         p{
-          padding-bottom: 38px;
+          //padding-bottom: 38px;
           margin-bottom: 0 !important;
           color: $text_color !important;
         }
@@ -801,6 +806,11 @@ body{
         border-radius: 5px;
         background-color: white;
         display: inline-block;
+        box-shadow: 0 0 15px 5px rgba(255, 255 ,255,0.3);
+        transition: 0.3s;
+        &:hover{
+          box-shadow: none;
+        }
       }
     }
     &__tel{
@@ -1023,9 +1033,14 @@ body{
       border-bottom: 1px solid #f0f1f7;
         &.active{
           .schema-faq-question{
-            padding-right: 0;
+            //padding-right: 0;
             &::after{
-              display: none;
+              //display: none;
+              content: '';
+              width: 10px;
+              height: 2px;
+              background-color: $text_color;
+              font-size: 13px;
             }
           }
         }
@@ -1038,7 +1053,8 @@ body{
           transition: 0.3s;
           background-color: transparent;
           margin-bottom: 20px;
-          opacity: 0.5;
+          //opacity: 0.5;
+          opacity: 0.8;
           color: $text_color;
           cursor: pointer;
           width: 100%;
@@ -1051,16 +1067,16 @@ body{
             opacity: 1;
           }
           &::after{
-            content: '';
+            content: '+';
             display: block;
             position: absolute;
             top: 50%;
             right: 0;
             transform: translateY(-50%);
-            width: 10px;
-            height: 2px;
-            background-color: $text_color;
-            font-size: 13px;
+            //width: 10px;
+            //height: 2px;
+            //background-color: $text_color;
+            font-size: 28px;
             margin-left: 7px;
           }
         }
@@ -1165,12 +1181,17 @@ body{
           font-size: 18px;
           font-weight: 700;
           line-height: 20.74px;
+          //box-shadow: 0 15px 70px rgba(46, 197, 192, 0.13);
           box-shadow: 0 15px 70px rgba(46, 197, 192, 0.13);
           border-radius: 4px;
           background-color: $button_color;
           color: white;
           padding: 12px 16px;
           display: inline-block;
+          transition: 0.3s;
+          &:hover{
+            box-shadow: none;
+          }
         }
         //transition: 0.3s;
         //visibility: hidden;
@@ -1223,8 +1244,8 @@ body{
     display: block;
     width: 100%;
     background-color: #f9f9f9;
-    top: 40%;
-    bottom: 0;
+    top: 21%;
+    height: 85%;
   }
   &__wrapper{
     &::after{
@@ -1253,10 +1274,12 @@ body{
     background-color: white;
     padding: 34px 30px;
     img{
-      margin-bottom: 33px;
+      //margin-bottom: 33px;
+      margin-bottom: 15px;
     }
     p{
-      font-size: 24px;
+      //font-size: 24px;
+      font-size: 22px;
       text-align: center !important;
       font-weight: 700;
       margin-bottom: 0 !important;
@@ -1376,7 +1399,11 @@ body{
           transition: 0.3s;
         }
       }
-
+      .img_wrapper{
+        .inner_part{
+          fill: #a50000;
+        }
+      }
       &:hover{
         background-color: $accent_color;
         .img_wrapper{
@@ -1917,10 +1944,6 @@ body{
       padding-top: 0;
       padding-bottom: 0;
       padding-left: 0;
-    }
-    &__list__item{
-      padding-right: 10px;
-      padding-left: 10px;
     }
   }
   /*Ivahid_difference*/
