--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -12,6 +12,7 @@
 Table of content
 -Fonts
 -General
+-Free consultation
 -Web design
 -Design effect
 -your position
@@ -233,6 +234,7 @@ body{
     }
   }
 }
+
 .swiper-pagination{
   top: 27px;
   bottom: unset !important;
@@ -250,6 +252,57 @@ body{
     transition: 0.3s;
   }
 }
+
+/*--------------------------------- Free consultation -------------------------------------*/
+.free-consultation{
+  margin-bottom: 30px;
+  background-color: #13b348;
+  padding-top: 43px;
+  padding-bottom: 34px;
+  .consultation-content{
+    font-size: 31px;
+    font-weight: 700;
+    line-height: 29.24px;
+    text-transform: uppercase;
+    color: white;
+  }
+  .consultation-contact{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    &__button{
+      margin-bottom: 19px;
+      a{
+        color: #464646;
+        font-size: 21px;
+        font-weight: 700;
+        line-height: 29.24px;
+        padding: 19px 30px 14px 29px;
+        border-radius: 5px;
+        background-color: white;
+        display: inline-block;
+        transition: 0.3s;
+        &:hover{
+          background-color: $accent_color;
+          color: white;
+        }
+      }
+    }
+    &__tel{
+      direction: ltr;
+      span{
+        font-size: 31px;
+        font-weight: 400;
+        color: white;
+        line-height: 29.24px;
+      }
+      span:last-child{
+        font-weight: 900;
+      }
+    }
+  }
+}
+
 /*--------------------------------- Web design sec -------------------------------------*/
 .web_design_sec{
   padding: 10px 0;
@@ -335,16 +388,9 @@ body{
   &__content{
     margin-bottom: 30px;
     padding-left: 15px;
-    //color: $text_color;
-    //text-align: justify;
     .title{
       margin-top: 30px;
     }
-    //&>p{
-    //  line-height: 35px;
-    //  margin-bottom: 0 !important;
-    //  color: $text_color !important;
-    //}
   }
   .text-center{
     .web_design_sec_link{
@@ -395,12 +441,8 @@ body{
         animation: wave 2s linear 1.5s infinite;
 
       }
-      //position: absolute;
       position: relative;
       display: inline-block;
-      //bottom: -100px;
-      //right: 50%;
-      //transform: translateX(50%);
       padding: 45px;
       border-radius: 50%;
       box-shadow: 0 15px 30px rgba(56, 66, 77, 0.08);
@@ -442,13 +484,6 @@ body{
     }
   }
   &__content{
-      //&>p{
-      //  font-size: 18px;
-      //  line-height: 35px;
-      //  text-align: justify;
-      //  margin-bottom: 0;
-      //  color: $text_color !important;
-      //}
       padding-top: 90px;
       .title{
         margin-bottom: 16px;
@@ -483,6 +518,11 @@ body{
       text-align: justify;
     }
   }
+  .inner_text_wrapper{
+    .text{
+      margin-bottom: 25px;
+    }
+  }
   &__content_wrapper{
     overflow: hidden;
     position: relative;
@@ -506,6 +546,7 @@ body{
 
     .categories_title_list{
       position: relative;
+      margin-bottom: 25px;
       &::before{
         content: '';
         display: block;
@@ -514,10 +555,9 @@ body{
         height: 100%;
         width: 20%;
         background: linear-gradient(90deg, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.3) 100%);
-        box-shadow: 4px 0px 25px 4px rgba(255,255, 255,0.448);
+        box-shadow: 4px 0 25px 4px rgba(255,255, 255,0.448);
         z-index: 1000;
       }
-      margin-bottom: 38px;
       .swiper-slide{
         margin-left: 0;
         margin-right: 0;
@@ -528,7 +568,7 @@ body{
             font-weight: 700;
             color: $text_color;
             display: inline-block;
-            padding: 10px 15px 12px 15px;
+            padding: 13px 15px 9px 15px;
             border: 1px solid #f0f1f7;
             border-radius: 30px;
             min-width: 90px;
@@ -568,7 +608,7 @@ body{
         height: 100%;
         width: 20%;
         background: linear-gradient(90deg, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.3) 100%);
-        box-shadow: 4px 0px 25px 4px rgba(255,255, 255,0.448);
+        box-shadow: 4px 0 25px 4px rgba(255,255, 255,0.448);
         z-index: 1000;
       }
       .slide_content{
@@ -671,13 +711,7 @@ body{
     }
   }
   &__content{
-    //font-size: 18px;
-    //text-align: justify;
     padding-top: 160px;
-    //&>p{
-    //  line-height: 35px;
-    //  margin-bottom: 0 !important;
-    //}
   }
 }
 
@@ -769,59 +803,7 @@ body{
   margin-bottom: 40px;
   &__content{
     padding-right: 45px;
-    //&>p{
-    //  line-height: 35px;
-    //  text-align: justify;
-    //  margin-bottom: 0 !important;
-    //}
   }
-&__free-consultation{
-  background-color: #13b348;
-  padding-top: 43px;
-  padding-bottom: 34px;
-  .consultation-content{
-    font-size: 31px;
-    font-weight: 700;
-    line-height: 29.24px;
-    text-transform: uppercase;
-    color: white;
-  }
-  .consultation-contact{
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    &__button{
-      margin-bottom: 19px;
-      a{
-        color: #464646;
-        font-size: 21px;
-        font-weight: 700;
-        line-height: 29.24px;
-        padding: 19px 30px 14px 29px;
-        border-radius: 5px;
-        background-color: white;
-        display: inline-block;
-        transition: 0.3s;
-        &:hover{
-          background-color: $accent_color;
-          color: white;
-        }
-      }
-    }
-    &__tel{
-      direction: ltr;
-      span{
-        font-size: 31px;
-        font-weight: 400;
-        color: white;
-        line-height: 29.24px;
-      }
-      span:last-child{
-        font-weight: 900;
-      }
-    }
-  }
-}
 }
 
 /*----------- Portfolio -------------*/
@@ -1029,11 +1011,7 @@ body{
         &.active{
           .schema-faq-question{
             &::after{
-              content: '';
-              width: 10px;
-              height: 2px;
-              background-color: $text_color;
-              font-size: 13px;
+              content: '-';
             }
           }
         }
@@ -1042,7 +1020,7 @@ body{
           position: relative;
           z-index: 1;
           text-align: right;
-          padding-right: 15px;
+          padding-right: 17px;
           transition: 0.3s;
           background-color: transparent;
           margin-bottom: 20px;
@@ -1062,9 +1040,8 @@ body{
             content: '+';
             display: block;
             position: absolute;
-            top: 50%;
+            top: 3px;
             right: 0;
-            transform: translateY(-50%);
             font-size: 28px;
             margin-left: 7px;
           }
@@ -1336,7 +1313,6 @@ body{
       flex-direction: column;
       justify-content: space-between;
       box-shadow: 0 15px 70px rgba(56, 66, 77, 0.04);
-      //margin: 0 48px;
       border-radius: 5px;
       height: 100%;
       background-color: white;
@@ -1368,11 +1344,6 @@ body{
           transition: 0.3s;
         }
       }
-      .img_wrapper{
-        .inner_part{
-          fill: #a50000;
-        }
-      }
       &:hover{
         background-color: $accent_color;
         .img_wrapper{
@@ -1380,7 +1351,7 @@ body{
             fill: white;
           }
           .inner_part{
-            fill: $text_color;
+            fill: #a50000;
           }
         }
         .text_wrapper{
@@ -1626,7 +1597,7 @@ body{
           text-align: center;
           flex: 0 0 auto;
           font-size: 20px;
-          line-height: 68px;
+          //line-height: 68px;
           padding-top: 17px;
           margin-left: 24px;
           width: 50px;
@@ -1799,6 +1770,17 @@ body{
 
 /*-------------------- < 768px ----------------------*/
 @media only screen and( max-width: 768px ){
+  /*free consultation*/
+  .free-consultation{
+    .consultation-content{
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    .consultation-contact{
+      align-items: center;
+    }
+
+  }
   /*Select_team*/
   .select_team__img__label{
     height: 80px;
@@ -1812,33 +1794,7 @@ body{
     &__content{
       padding-right: 0;
     }
-    &__free-consultation{
-      .consultation-content{
-        margin-bottom: 20px;
-        text-align: center;
-      }
-      .consultation-contact{
-        align-items: center;
-      }
-    }
   }
-
-  /*videos*/
-  //.videos{
-    //&__wrapper{
-    //  .item{
-    //    a{
-    //      opacity: 1;
-    //      &::before{
-    //        animation: wave 2s linear 0.5s infinite;
-    //      }
-    //      &::after{
-    //        animation: wave 2s linear 1.5s infinite;
-    //      }
-    //    }
-    //  }
-    //}
-  //}
   /* podcast*/
   .podcast{
     &__container{
@@ -1915,11 +1871,7 @@ body{
       padding-left: 0;
     }
   }
-  /*Ivahid_difference*/
-  //.ivahid_difference{
-  //  padding-left: 20px;
-  //  padding-right: 20px;
-  //}
+  /*Portal*/
   .portal{
     margin-bottom: 40px;
   }
