--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1103,11 +1103,11 @@ body{
       }
       .post_title{
         display: block;
-        font-size: 24px;
+        font-size: 19px;
         font-weight: 700;
         line-height: 35px;
         color: $text_color;
-        text-align: justify;
+        text-align: right;
         margin-bottom: 18px;
         padding-bottom: 26px;
         border-bottom: 1px solid #f0f1f7;
