faq padding bottom was removed

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -956,7 +956,7 @@ body{
 /*--------------------------------- Faq -------------------------------------*/
 .faq{
   padding-top: 107px;
-  padding-bottom: 300px;
+  //padding-bottom: 300px;
   margin-bottom: 109px;
   position: relative;
   &::before, &::after{
