--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -131,6 +131,9 @@ Media queries
     padding: 0 15px;
   }
 }
+.text-center{
+  text-align: center !important;
+}
 body{
   .web-design-page{
     font-family: "Yekan Bakh", sans-serif;
@@ -922,12 +925,10 @@ body{
       align-items: center;
       padding: 0 15px;
       transition: 0.3s;
-       //&.swiper-slide-active{
         opacity: 1;
         box-shadow: 0 15px 70px rgba(56, 66, 77, 0.04);
         border-radius: 0 8px 0 0;
         background-color: white;
-      //}
     }
 
     .view_more{
