--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -919,6 +919,8 @@ body{
       margin-bottom: 70px;
     }
     .swiper-slide {
+      margin-bottom: 30px;
+      margin-top: 30px;
       text-align: center;
       display: flex;
       justify-content: center;
