--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -481,7 +481,7 @@ body{
       right: -115px;
       bottom: -14px;
       background: rgba(164, 162, 162, 0.3);
-      transform: skew(-65deg);
+      transform: skew(-65deg) rotate(-2deg);
       filter: blur(10px);
       z-index: -1;
       height: 10%;
