your_position outer_text_wrapper is in block in all screen sizes

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -511,8 +511,13 @@ body{
     }
   }
   .outer_text_wrapper{
+    //display: none;
+    display: block;
+  }
+  .inner_text_wrapper{
     display: none;
   }
+
   .text{
     color: $text_color;
     margin-bottom: 64px;
