--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -338,6 +338,7 @@ body{
       bottom: 12%;
       video{
         width: 100%;
+        max-height: 100%;
       }
       &:hover{
         .web_design_sec_video_btn{
